--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=8080
-MONGO_URI=mongodb+srv://atharvbhadange18:atharv18@atharv.npliqod.mongodb.net/?retryWrites=true&w=majority&appName=atharv
+MONGO_URI=
 JWT_SECRET=JWT_SECRET_KEY
